# dsa-zadanie2

./: .gitignore  CMakeLists.txt  readme.md
doc/: Zadanie 2 - Vyhľadávanie v dynamických množinách.docx
src/: avl.c  main.c
src/bst/avl/: avl-test.c  avl.c
src/bst/red-black/: red-black-test.c  red-black.c
src/hashmap/chaining/: chaining-test.c  chaining.c
src/hashmap/quadratic-probing/: quadratic-probing-test.c  quadratic-probing.c
